--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "next": "^14.2.0",
+    "openai": "^6.22.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
