chore(env): add OPENAI_API_KEY and DATABASE_URL to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Required: Your Sleeper league ID (find it in the Sleeper app URL)
 SLEEPER_LEAGUE_ID=
 
+# Required: OpenAI API key for AI recap generation
+OPENAI_API_KEY=
+
+# Required: Neon Postgres connection string (also accepts POSTGRES_URL)
+DATABASE_URL=
+
 # TODO: [multi-league] Comma-separated list of league IDs
 # SLEEPER_LEAGUE_IDS=
 
