feat(recap): add private style examples and R-rated tone

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ SLEEPER_LEAGUE_ID=
 # Required: OpenAI API key for AI recap generation
 OPENAI_API_KEY=
 
+# Optional: private style examples to steer recap voice in production
+# RECAP_STYLE_EXAMPLES=
+# RECAP_STYLE_EXAMPLES_B64=
+
 # Required: Neon Postgres connection string (also accepts POSTGRES_URL)
 DATABASE_URL=
 
